--- a/example/cdn.html
+++ b/example/cdn.html
@@ -1,5 +1,5 @@
 <body>
-  <script src="https://unpkg.com/avio@0.0.4/lib/avio.min.js"></script>
+  <script src="https://unpkg.com/avio/lib/avio.min.js"></script>
   <script>
     const input = avio.input.create()
     const output = avio.output.audio.create()
