--- a/example/standalone.html
+++ b/example/standalone.html
@@ -1,5 +1,6 @@
 <body>
-  <script src="https://unpkg.com/avio/lib/avio.min.js"></script>
+  <!-- <script src="https://unpkg.com/avio/lib/avio.min.js"></script> -->
+  <script src="../lib/avio.min.js"></script>
   <script>
     const input = avio.input.create()
     const output = avio.output.audio.create()
