--- a/example/index.html
+++ b/example/index.html
@@ -2,10 +2,7 @@
   <!-- <script src="https://unpkg.com/avio/lib/avio.min.js"></script> -->
   <script src="../lib/avio.min.js"></script>
   <script>
-    const { audio, mouse, circle, rectangle, triangle, line } = avio
-
-    const shape1 = circle().x(0.5).y(0.5)
-
-    mouse.x.multiply(0.5).connect(shape1.radius)
+    const sun = circle().x(0.5).y(0.5)
+    mouse.x.connect(sun.radius)
   </script>
 </body>
