--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,16 @@
-<!-- <script src="https://unpkg.com/avio/lib/avio.min.js"></script> -->
-<script src="../lib/avio.min.js"></script>
+<!-- <script src="https://unpkg.com/avio"></script> -->
+<script src="/avio.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 <script>
   const sun = circle().x(0.5).y(0.5)
-  mouse.x.connect(sun.radius)
+  const pyramid = triangle().x(0.5).y(0.5).hue(200)
+  const sound = audio()
+
+  touch.swipe.connect(pyramid.size)
+
+  touch.y.multiply(touch.down).pow(2).connect(sun.radius).connect(sound.gain)
+  touch.x.multiply(touch.down).multiply(2000).connect(sound.frequency).connect(sun.hue)
+
+  mouse.y.multiply(mouse.down).pow(2).connect(sun.radius).connect(sound.gain)
+  mouse.x.multiply(mouse.down).multiply(2000).connect(sound.frequency).connect(sun.hue)
 </script>
