--- a/example/index.html
+++ b/example/index.html
@@ -7,6 +7,8 @@
   const pyramid = triangle().x(0.5).y(0.5).hue(200)
   const sound = audio()
 
+  lfo.square(1000).connect(pyramid.x)
+
   mouse.y.multiply(mouse.down).multiply(0.1).add(0.5).spring({ stiffness: 500, damping: 50, restVelocityThreshold: 0.00001 }).connect(screen.y)
 
   mouse.x.spring({ stiffness: 500, damping: 10, restVelocityThreshold: 0.00001 }).connect(sun.x)
