--- a/example/index.html
+++ b/example/index.html
@@ -2,17 +2,45 @@
 <script src="/avio.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
 <script>
-  const screen = rectangle().x(0.5).y(0.5).width(2).saturation(0)
-  const sun = circle().x(0.5).y(0.5).radius(0.1)
-  const pyramid = triangle().x(0.5).y(0.5).hue(200)
-  const sound = audio()
+  const box = rectangle().x(0.5).y(0.5).width(0.5).height(0.5)
 
-  lfo.square(1000).connect(pyramid.x)
+  // TODO:
+  // integration methods (add to shapes):
+  // move.rotation
+  // move.x
+  // move.y
 
-  mouse.y.multiply(mouse.down).multiply(0.1).add(0.5).spring({ stiffness: 500, damping: 50, restVelocityThreshold: 0.00001 }).connect(screen.y)
+  // delta values:
+  // touch.pan.move.x
 
-  mouse.x.spring({ stiffness: 500, damping: 10, restVelocityThreshold: 0.00001 }).connect(sun.x)
-  mouse.y.spring({ stiffness: 500, damping: 10, restVelocityThreshold: 0.00001 }).connect(sun.y)
+  // absolute values:
+  // touch.pan.x
+
+  touch.rotate.angle.connect(box.rotation)
+
+  touch.tap.log()
+  touch.swipe.velocity.log()
+  touch.swipe.direction.log()
+  touch.pinch.log()
+  touch.expand.log() // Fucked up, works like pinch!
+  touch.pan.distanceFromOrigin.log()
+  touch.pan.directionFromOrigin.log()
+  touch.pan.currentDirection.log()
+  touch.rotate.angle.log()
+  touch.rotate.distanceFromOrigin.log()
+  touch.rotate.distanceFromLast.log()
+
+  // const screen = rectangle().x(0.5).y(0.5).width(2).saturation(0)
+  // const sun = circle().x(0.5).y(0.5).radius(0.1)
+  // const pyramid = triangle().x(0.5).y(0.5).hue(200)
+  // const sound = audio()
+  //
+  // lfo.square(1000).connect(pyramid.x)
+  //
+  // mouse.y.multiply(mouse.down).multiply(0.1).add(0.5).spring({ stiffness: 500, damping: 50, restVelocityThreshold: 0.00001 }).connect(screen.y)
+  //
+  // mouse.x.spring({ stiffness: 500, damping: 10, restVelocityThreshold: 0.00001 }).connect(sun.x)
+  // mouse.y.spring({ stiffness: 500, damping: 10, restVelocityThreshold: 0.00001 }).connect(sun.y)
 
   // touch.swipe.connect(pyramid.size)
   //
