Add time input with examples

--- a/public/index.html
+++ b/public/index.html
@@ -13,4 +13,7 @@
 
 <ul>
   <li><a href="examples/basic.html">Basic</a></li>
+  <li><a href="examples/frame.html">Frame</a></li>
+  <li><a href="examples/lines.html">Lines</a></li>
+  <li><a href="examples/interval.html">Interval</a></li>
 </ul>
